medium zoomがバグって動かないのでいろいろ試している

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -936,7 +936,7 @@ span.post_tag::before {
   display: inline-block;
 }
 
-.pagination .current {
+.pagination .active {
   background-color: #F5F5F5;
 }
 
