--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -707,7 +707,7 @@ Site Header
 
 .site-header>.wrap {
   padding: 20px 0 0 0;
-  background: #fff url(//retrorocket.biz/public/img/onepoint.png) no-repeat right 2% bottom 0%/8%;
+  background: #fff url(//retrorocket.biz/public/img/onepoint.png) no-repeat right 2% bottom 0%/auto 55%;
 }
 
 .more-link, .more-link:visited {
