--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -795,6 +795,7 @@ Site Navigation
   display: block;
   padding: 15px 27px;
   position: relative;
+  transition: background-color 0.3s;
 }
 
 .omega-nav-menu a:hover {
@@ -1239,6 +1240,7 @@ Media Queries
     padding-top: 16px;
     padding-bottom: 16px;
     border-bottom: 1px solid #eee;
+    transition: background-color 0.3s;
   }
   ul.menu-primary li:last-child a {
     border-bottom: none;
