--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -711,11 +711,11 @@ Site Header
 }
 
 .more-link, .more-link:visited {
-  padding: 6px 18px;
+  padding: 6px 24px;
   border: 1px solid #75B5C5;
   border-radius: 4px;
   display: inline-block;
-  margin-top: 10px;
+  margin-top: 0;
   color: #fff;
   background: #75B5C5;
 }
