--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -712,17 +712,17 @@ Site Header
 
 .more-link, .more-link:visited {
   padding: 6px 24px;
-  border: 1px solid #75B5C5;
   border-radius: 4px;
   display: inline-block;
   margin-top: 0;
   color: #fff;
   background: #75B5C5;
+  transition: background-color 0.3s;
 }
 
 .more-link:hover, .more-link:focus, .more-link:active {
-  background: #fff;
-  color: #75B5C5;
+  background: #99cedb;
+  color: #fff;
 }
 
 /* Title Area
