--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -707,7 +707,6 @@ Site Header
 
 .site-header>.wrap {
   padding: 20px 0 0 0;
-  background: #fff url(images/onepoint.png) no-repeat right 2% bottom 0%/auto 51%;
 }
 
 .more .more-link {
@@ -745,17 +744,17 @@ Site Header
 }
 
 .site-title {
+  text-align: center;
   font-size: 32px;
   font-family: 'Montserrat', sans-serif;
   line-height: 1;
   margin: 0;
-  letter-spacing: 2px;
+  letter-spacing: 5px;
+  padding-bottom: 10px;
 }
 
 .site-title a, .site-title a:hover {
   color: #75B5C5;
-  border-bottom: #75B5C5 1px dotted;
-  font-weight: 500;
 }
 
 .site-description {
