--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -500,9 +500,8 @@ Structure and Layout
 }
 
 .site-inner {
-  background: url(images/line.png) repeat-x scroll top;
   clear: both;
-  padding-top: 55px;
+  padding-top: 50px;
 }
 
 /* Column Widths and Positions
@@ -740,7 +739,7 @@ Site Header
 }
 
 #navigation {
-  background-color: #75B5C5;
+  background-color: #fff;
 }
 
 .site-title {
@@ -754,7 +753,7 @@ Site Header
 }
 
 .site-title a, .site-title a:hover {
-  color: #75B5C5;
+  color: #fff;
 }
 
 .site-description {
@@ -791,17 +790,17 @@ Site Navigation
 }
 
 .omega-nav-menu a {
-  color: #fff;
-  border: none;
+  color: #75b5c5;
+  border-top: solid 3px #fff;
+  border-bottom: solid 3px #fff;
   display: block;
   padding: 15px 27px;
   position: relative;
-  transition: background-color 0.3s;
+  transition: border-bottom 0.3s;
 }
 
 .omega-nav-menu a:hover {
-  color: #fff;
-  background-color: #99cedb;
+  border-bottom: solid 3px #75b5c5;
 }
 
 .omega-nav-menu ul {
@@ -1243,6 +1242,8 @@ Media Queries
     margin: 0;
   }
   ul.menu-primary a {
+    border: 0;
+    color: #fff;
     padding-top: 16px;
     padding-bottom: 16px;
     border-bottom: 1px solid #eee;
@@ -1252,6 +1253,7 @@ Media Queries
     border-bottom: none;
   }
   ul.menu-primary a:hover {
+    border-bottom: 1px solid #eee;
     background-color: #99cedb;
     color: #fff;
   }
