--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -314,7 +314,9 @@ dl dd {
   margin: 5px 0 0 24px;
 }
 
+/*
 blockquote, blockquote::before {}
+*/
 
 blockquote {
   margin: 0;
@@ -550,7 +552,9 @@ Structure and Layout
   display: none;
 }
 
+/*
 .sticky {}
+*
 
 img.centered, .aligncenter {
   display: block;
@@ -1020,7 +1024,9 @@ li.comment ol {
   margin: 0 16px 24px 0;
 }
 
+/*
 .bypostauthor {}
+*/
 
 .form-allowed-tags {
   background: #f5f5f5;
@@ -1032,7 +1038,9 @@ li.comment ol {
 Sidebars
 ---------------------------------------------------------------------------------------------------- */
 
+/*
 .sidebar {}
+*/
 
 .widget-title {
   word-wrap: break-word;
@@ -1202,7 +1210,7 @@ Media Queries
     border-top: 4px solid #9ae2d5;
   }
   .menu-icon:hover {
-    opacity: 1;
+    opacity: 0;
   }
   ul.menu-primary {
     position: absolute;
@@ -1210,10 +1218,12 @@ Media Queries
     background: linear-gradient(90deg, #75b5c5, #9ae2d5);
     display: none;
     width: 100%;
-    z-index: 20;
   }
   .nav-primary .wrap:hover ul.menu-primary {
     display: block;
+  }
+  .nav-primary .wrap:hover .menu-icon {
+    opacity: 0;
   }
   /*Create vertical spacing*/
   ul.menu-primary li {
